feat: add class '08-pw-hands-on' (WIP)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,5 +41,8 @@
     "moduleDetection": "force",
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
   }
 }
